--- a/views/home.njk
+++ b/views/home.njk
@@ -1,5 +1,55 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-<h1>Hello, world!</h1>
+    <div class="grid">
+        <div class="navbar">
+            <div class="logo">
+                <img src="./assets/logo.png"/>
+            </div>
+
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">About</a>
+                    </li>
+                    <li>
+                        <a href="">Categories</a>
+                    </li>
+                    <li>
+                        <a href="">Store</a>
+                    </li>
+                    <li>
+                        <a href="">Blog</a>
+                    </li>
+                    <li>
+                        <a href="">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <section class="upper-section">
+            <div class="left">
+                <h1>Welcome to Kink.com</h1>
+                <p>Get Kink for 50% off</p>
+            </div>
+            <div class="placeholder">
+                <img src="./assets/placeholder.png"/>
+            </div>
+        </section>
+        <section class="lower-section">
+            <div class="form-card">
+                <form name="comment-form" method="POST">
+                    <div class="form-control">
+                        <input type="text" name="username" placeholder="Username" required="required">
+                    </div>
+                    <div class="form-control">
+                        <input type="text" name="comment" placeholder="Comment" required="required">
+                    </div>
+                    <input type="submit" value="Post Comment" class="submit">
+                </form>
+            </div>
+            <div class="comments"></div>
+        </section>
+    </div>
 {% endblock %}
