--- a/views/home.njk
+++ b/views/home.njk
@@ -49,7 +49,28 @@
                     <input type="submit" value="Post Comment" class="submit">
                 </form>
             </div>
-            <div class="comments"></div>
+            <div class="comments">
+                <div class="comment">
+                    <span class="username">kinkyGal69</span>
+                    <p class="comment-text">This is both beautifully written, and a vital Voice, that should be heard.</p>
+                </div>
+                <div class="comment">
+                    <span class="username">sexting101</span>
+                    <p class="comment-text">Hey Mark I was just wondering how you can become a dungeon master with kink?</p>
+                </div>
+                <div class="comment">
+                    <span class="username">verySexxxy</span>
+                    <p class="comment-text">I just want to say thank you, Although i myself am not an adult performer. I still want to say thank you because a person close to me is and they are terrified to speak out and to share their voice.</p>
+                </div>
+                <div class="comment">
+                    <span class="username">sexting101</span>
+                    <p class="comment-text">Thanks for the info!</p>
+                </div>
+                <div class="comment">
+                    <span class="username">hotGuyXXX</span>
+                    <p class="comment-text">Serisously though, interesting video and the sort of thing I hope you’ll continue to do.</p>
+                </div>
+            </div>
         </section>
     </div>
 {% endblock %}
