--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,73 @@
+$background-color: rgba(46, 39, 42, 0.3);
+$background-color-white: rgba(255, 255, 255, 0.3);
+$border-rad: 2px;
+$font-size28: 28px;
+$font-size40: 40px;
 $font-stack: Arial, Helvetica, sans-serif;
+$grid-gap20: 20px;
+
+/** Colors **/
 $primary-bg: #000;
-$primary-text-color: #ff3b3b;
+$primary-text-color: #fa3990;
+$secondary-text-color: #fff;
+$hover-pink: #f3026f;
+$dark-sienna: rgba(46, 1, 21, 0.4);
+
+/** Mixins **/
+@mixin section-grid {
+	background-color: $background-color;
+	border-radius: $border-rad;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-gap: $grid-gap20;
+	padding: 34px;
+}
+
+@mixin mobile-nav-grid {
+	@media (max-width: 768px) {
+		grid-template-columns: 1fr 2fr;
+		.logo {
+			img {
+				max-width: 100px;
+			}
+		}
+
+		nav {
+			ul {
+				justify-items: start;
+			}
+		}
+	}
+}
+
+@mixin mobile-grid {
+	@media (max-width: 768px) {
+		grid-template-columns: 1fr;
+	}
+}
+
+@mixin field-style {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	border: 3px solid $dark-sienna;
+	border-radius: 4px;
+	box-sizing: border-box;
+
+	&:focus {
+		border: 3px solid $hover-pink;
+		outline: none;
+	}
+}
 
 body {
 	background-color: $primary-bg;
 	font-family: $font-stack;
+	display: flex;
+	justify-content: center;
+}
+h1 {
+	font-size: $font-size40;
 }
 
 h1,
@@ -18,12 +81,17 @@ p {
 
 .grid {
 	display: grid;
+	flex: 1;
+	grid-gap: $grid-gap20;
 	grid-template-columns: 1fr;
+	min-width: 260px;
+	max-width: 1200px;
 
 	.navbar {
 		display: grid;
 		grid-template-columns: 50px 3fr;
-		grid-gap: 20px;
+		grid-gap: $grid-gap20;
+
 		.logo {
 			img {
 				width: 100%;
@@ -33,17 +101,52 @@ p {
 			ul {
 				display: grid;
 				grid-template-columns: repeat(auto-fill, 100px);
-				grid-gap: 20px;
+				grid-gap: $grid-gap20;
+				justify-items: center;
+				@include mobile-grid;
+
+				li {
+					a {
+						color: $secondary-text-color;
+						font-weight: bold;
+						text-decoration: none;
+						padding: 10px 0;
+
+						&:hover {
+							border-bottom: 3px solid $hover-pink;
+							color: $primary-text-color;
+							background-color: $dark-sienna;
+						}
+					}
+				}
 			}
 		}
+
+		@include mobile-nav-grid;
 	}
 
 	.upper-section {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-		grid-gap: 20px;
+		@include section-grid;
+		@include mobile-grid;
+		grid-gap: 0;
+		.left {
+			display: flex;
+			flex-direction: column;
+			align-items: start;
+			justify-content: center;
+			& > * {
+				background-color: $dark-sienna;
+				padding: 20px 10px;
+				margin: 10px 0;
+			}
 
+			.promo-text {
+				font-size: $font-size28;
+			}
+		}
 		.placeholder {
+			justify-self: center;
+			align-self: center;
 			img {
 				width: 100%;
 				max-width: 400px;
@@ -52,8 +155,61 @@ p {
 	}
 
 	.lower-section {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-		grid-gap: 20px;
+		@include section-grid;
+		@include mobile-grid;
+
+		.form-card {
+			background-color: $background-color-white;
+			padding: 40px;
+			text-align: center;
+
+			.form-title {
+				background-color: $dark-sienna;
+				font-size: $font-size28;
+				padding: 10px;
+			}
+
+			.form-control {
+				input {
+					@include field-style;
+				}
+
+				textarea {
+					@include field-style;
+					height: 200px;
+				}
+			}
+
+			.submit {
+				background-color: $primary-text-color;
+				color: $secondary-text-color;
+				font-weight: bold;
+				padding: 14px 20px;
+				margin: 8px 0;
+				border: none;
+				border-radius: 4px;
+
+				&:hover {
+					background-color: $hover-pink;
+				}
+			}
+		}
+
+		.comments {
+			.comment {
+				background-color: $dark-sienna;
+				border: 2px solid $background-color-white;
+				border-radius: 2px;
+				font-size: 14px;
+				letter-spacing: 1.2px;
+				line-height: 1.4;
+				padding: 20px;
+				margin-bottom: 20px;
+				.username {
+					color: $secondary-text-color;
+					font-weight: bold;
+				}
+			}
+		}
 	}
 }
