--- a/scss/main.scss
+++ b/scss/main.scss
@@ -109,6 +109,7 @@ p {
 					a {
 						color: $secondary-text-color;
 						font-weight: bold;
+						letter-spacing: 1px;
 						text-decoration: none;
 						padding: 10px 0;
 
