--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,25 @@ $dark-sienna: rgba(46, 1, 21, 0.4);
 	}
 }
 
+@mixin error-style {
+	background-color: rgb(243, 177, 177);
+	border: 2px solid red;
+	color: red;
+	display: none;
+	font-size: 14px;
+	padding: 10px;
+}
+
+@mixin success-style {
+	background-color: #90ee90;
+	border: 2px solid #228b22;
+	color: #228b22;
+	display: none;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 10px;
+}
+
 body {
 	background-color: $primary-bg;
 	font-family: $font-stack;
@@ -77,6 +96,18 @@ h4,
 h5,
 p {
 	color: $primary-text-color;
+}
+
+pre {
+	@include error-style;
+}
+
+#success {
+	@include success-style;
+}
+
+#failed {
+	@include error-style;
 }
 
 .grid {
@@ -189,6 +220,7 @@ p {
 				margin: 8px 0;
 				border: none;
 				border-radius: 4px;
+				outline: none;
 
 				&:hover {
 					background-color: $hover-pink;
