--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>{{ pageTitle }}</title>
-	<link rel="stylesheet" href="/css/main.css"/>
-</head>
-<body>
-	{% block content %}{% endblock %}
-<footer>
-	{% block footer %}{% endblock %}
-</footer>
-</body>
+				<head>
+								<meta charset="utf-8">
+								<title>{{ pageTitle }}</title>
+								<link rel="stylesheet" href="/css/main.css"/>
+				</head>
+				<body>
+								{% block content %}{% endblock %}
+								<footer>
+												{% block footer %}{% endblock %}
+								</footer>
+								<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+								<script src="/js/comments.js"></script>
+				</body>
 </html>
